Added fonts to website

--- a/src/components/Clientes.astro
+++ b/src/components/Clientes.astro
@@ -11,7 +11,34 @@
 		<title>Alexágono</title>
 	</head>
 	<body>
+        <style>
+            @font-face {
+                font-family: "visby" ;
+                src: url("../fonts/VisbyRoundCF-Regular.otf");
+        }
+        @font-face {
+                font-family: "visby-extrabold" ;
+                src: url("../fonts/VisbyRoundCF-ExtraBold.otf");
+        }
+        @font-face {
+                font-family: "visby-light" ;
+                src: url("../fonts/VisbyRoundCF-Light.otf");
+        }
+        @font-face {
+                font-family: "visby-Demibold" ;
+                src: url("../fonts/VisbyRoundCF-DemiBold.otf");
+        }
+
+    
+        h1{
+            font-family: visby-Demibold;
+        }
+
+        p{
+            font-family: visby-Demibold;
+        }
+        </style>
         <h1>Nuestros aliados</h1>
-        
+
     </body>
 </html>
