--- a/src/components/Inicio.astro
+++ b/src/components/Inicio.astro
@@ -11,6 +11,30 @@
 		<title>Alexágono</title>
 	</head>
 	<body>
+
+        <style>
+            @font-face {
+                font-family: "visby" ;
+                src: url("../fonts/VisbyRoundCF-Regular.otf");
+        }
+        @font-face {
+                font-family: "visby-extrabold" ;
+                src: url("../fonts/VisbyRoundCF-ExtraBold.otf");
+        }
+        @font-face {
+                font-family: "visby-light" ;
+                src: url("../fonts/VisbyRoundCF-Light.otf");
+        }
+    
+        h3{
+            font-family: visby-light;
+        }
+
+        h1{
+            font-family: visby-extrabold;
+        }
+        </style>
+
          <h3>Tecnología accessible para todos</h3>
          <h1>Innovación tecnológica en un mundo digital colectivo</h1>
          <h3>Creemos en la fuerza del colectivo, donde cada línea de código
