--- a/src/components/Nosotros.astro
+++ b/src/components/Nosotros.astro
@@ -11,6 +11,33 @@
 		<title>Alexágono</title>
 	</head>
 	<body>
+        <style>
+            @font-face {
+                font-family: "visby" ;
+                src: url("../fonts/VisbyRoundCF-Regular.otf");
+        }
+        @font-face {
+                font-family: "visby-extrabold" ;
+                src: url("../fonts/VisbyRoundCF-ExtraBold.otf");
+        }
+        @font-face {
+                font-family: "visby-light" ;
+                src: url("../fonts/VisbyRoundCF-Light.otf");
+        }
+        @font-face {
+                font-family: "visby-Demibold" ;
+                src: url("../fonts/VisbyRoundCF-DemiBold.otf");
+        }
+
+    
+        h1{
+            font-family: visby-Demibold;
+        }
+
+        p{
+            font-family: visby-Demibold;
+        }
+        </style>
         <h1>¿Qué acerca de nosotros?</h1>
         <p>
             En Alexágono, sacamos la chamba. No solo somos coders, ¡Somos
