--- a/src/components/Servicios.astro
+++ b/src/components/Servicios.astro
@@ -11,6 +11,36 @@
 		<title>Alexágono</title>
 	</head>
 	<body>
+        <style>
+            @font-face {
+                font-family: "visby" ;
+                src: url("../fonts/VisbyRoundCF-Regular.otf");
+        }
+        @font-face {
+                font-family: "visby-extrabold" ;
+                src: url("../fonts/VisbyRoundCF-ExtraBold.otf");
+        }
+        @font-face {
+                font-family: "visby-light" ;
+                src: url("../fonts/VisbyRoundCF-Light.otf");
+        }
+        @font-face {
+                font-family: "visby-Demibold" ;
+                src: url("../fonts/VisbyRoundCF-DemiBold.otf");
+        }
+
+        h1{
+            font-family: visby-extrabold;
+        }
+        
+        h2{
+            font-family: visby-Demibold;
+        }
+
+        li{
+            font-family: visby-Demibold;
+        }
+        </style>
         <h1>Servicios</h1>
         <div class="servicios">
             <div class="inteligencia-negocios">
