--- a/src/components/Contacto.astro
+++ b/src/components/Contacto.astro
@@ -11,6 +11,33 @@
 		<title>Alexágono</title>
 	</head>
 	<body>
+        <style>
+            @font-face {
+                font-family: "visby" ;
+                src: url("../fonts/VisbyRoundCF-Regular.otf");
+        }
+        @font-face {
+                font-family: "visby-extrabold" ;
+                src: url("../fonts/VisbyRoundCF-ExtraBold.otf");
+        }
+        @font-face {
+                font-family: "visby-light" ;
+                src: url("../fonts/VisbyRoundCF-Light.otf");
+        }
+        @font-face {
+                font-family: "visby-Demibold" ;
+                src: url("../fonts/VisbyRoundCF-DemiBold.otf");
+        }
+
+    
+        h1{
+            font-family: visby-Demibold;
+        }
+
+        label{
+            font-family: visby-Demibold;
+        }
+        </style>
         <h1>¡Contáctanos!</h1>
         <form>
             <label for="fname">Nombre</label><br>
