[Fix] Corrected anchor tag styles for both header and footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -22,17 +22,21 @@ import Instagram from "../components/Instagram.astro";
 
     a{
         color: #FFFFFF;
+        text-decoration: none;
     }
     a:visited{
         color: #FFFFFF;
+        text-decoration: none;
     }
 
     a:hover{
         color: #FFFFFF;
+        text-decoration: none;
     }
 
     a:active{
         color: #FFFFFF;
+        text-decoration: none;
     }
 
 
