--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,8 +1,6 @@
 ---
 
 ---
-
-
 <style>
 
     @font-face {
@@ -12,17 +10,21 @@
 
     a{
         color: #FFFFFF;
+        text-decoration: none;
     }
     a:visited{
         color: #FFFFFF;
+        text-decoration: none;
     }
 
     a:hover{
         color: #FFFFFF;
+        text-decoration: ;
     }
 
     a:active{
         color: #FFFFFF;
+        text-decoration: none;
     }
 
     .c-header{
