[Fix] Corrected social media buttons on footer for site, previous versions of the site there were no social media buttons appearing

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -54,6 +54,9 @@ import Instagram from "../components/Instagram.astro";
     #emails{
         display: inline-block;
     }
+    #social{
+        display: inline-block;
+    }
 </style>
 
 <div id="footer-principal">
