feat(web): added colors for divs and fonts on site

--- a/src/components/Clientes.astro
+++ b/src/components/Clientes.astro
@@ -32,13 +32,19 @@
     
         h1{
             font-family: visby-Demibold;
+            color: #FFFFFF;
         }
 
         p{
             font-family: visby-Demibold;
         }
+        #clientes-estilos{
+            background-color: #8A92C9;
+        }
         </style>
-        <h1>Nuestros aliados</h1>
+        <div id="clientes-estilos">
+            <h1>Nuestros aliados</h1>
+        </div>
 
     </body>
 </html>
