--- a/src/components/Inicio.astro
+++ b/src/components/Inicio.astro
@@ -28,21 +28,31 @@
     
         h3{
             font-family: visby-light;
+            color: #FFFFFF;
         }
 
         h1{
             font-family: visby-extrabold;
         }
-        </style>
 
-         <h3>Tecnología accessible para todos</h3>
-         <h1>Innovación tecnológica en un mundo digital colectivo</h1>
-         <h3>Creemos en la fuerza del colectivo, donde cada línea de código
-            es un eslabón en la cadena de una visión compartida.
-         </h3>
-         <h3>
-            Únete a nosotros y juntos, forjemos un camino hacia un mañana digital
-            que todos construimos y compartimos
-         </h3>
+        .title{
+            color: #1B2A57;
+        }
+
+        #inicio{
+            background-color: #8A92C9;
+        }
+        </style>
+        <div id="inicio">
+            <h3 class="title">Tecnología accessible para todos</h3>
+            <h1>Innovación tecnológica en un mundo digital colectivo</h1>
+            <h3>Creemos en la fuerza del colectivo, donde cada línea de código
+               es un eslabón en la cadena de una visión compartida.
+            </h3>
+            <h3>
+               Únete a nosotros y juntos, forjemos un camino hacia un mañana digital
+               que todos construimos y compartimos
+            </h3>
+        </div>
     </body>
 </html>
