--- a/src/components/Servicios.astro
+++ b/src/components/Servicios.astro
@@ -40,9 +40,17 @@
         li{
             font-family: visby-Demibold;
         }
+        #servicios-alexagono{
+            background-color: #6062AC;
+            color: #FFFFFF;
+        }
+        #valor-servicios{
+            background-color: #1E1E1E;
+            color: #FFFFFF;
+        }
         </style>
-        <h1>Servicios</h1>
-        <div class="servicios">
+        <div id="servicios-alexagono">
+            <h1>Servicios</h1>
             <div class="inteligencia-negocios">
                 <h2>Inteligencia de negocios</h2>
                 <ol>
@@ -62,7 +70,7 @@
                 </ol>
             </div>
         </div>
-        <div class="valor-servicios">
+        <div id="valor-servicios">
             <h2>El valor de nuestro servicios</h2>
             <div class="nuestros-servicios">
                 <div class="inteligencia">
