--- a/src/components/Contacto.astro
+++ b/src/components/Contacto.astro
@@ -36,16 +36,23 @@
 
         label{
             font-family: visby-Demibold;
+            color: #FFFFFF;
+        }
+        #contacto-div{
+            background-color: #4B4C77;
+            color: #FFFFFF;
         }
         </style>
-        <h1>¡Contáctanos!</h1>
-        <form>
-            <label for="fname">Nombre</label><br>
-            <input type="text" id="fname" name="fname"><br>
-            <label for="email">Correo electrónico</label><br>
-            <input type="email" name="email" id="email"><br>
-            <label for="company">Empresa</label><br>
-            <input type="text" name="company" id="company">
-        </form>
+        <div id="contacto-div">
+            <h1>¡Contáctanos!</h1>
+            <form>
+                <label for="fname">Nombre</label><br>
+                <input type="text" id="fname" name="fname"><br>
+                <label for="email">Correo electrónico</label><br>
+                <input type="email" name="email" id="email"><br>
+                <label for="company">Empresa</label><br>
+                <input type="text" name="company" id="company">
+            </form>
+        </div>
     </body>
 </html>
