--- a/src/components/Nosotros.astro
+++ b/src/components/Nosotros.astro
@@ -37,20 +37,26 @@
         p{
             font-family: visby-Demibold;
         }
+        #nosotros{
+            background-color: #8A92C9;
+            color: #FFFFFF;
+        }
         </style>
-        <h1>¿Qué acerca de nosotros?</h1>
-        <p>
-            En Alexágono, sacamos la chamba. No solo somos coders, ¡Somos
-            la banda que transforma retos en pura chispa digital!
-        </p>
-        <p>
-            Aquí, la accesibilidad y la institucionalidad son el ritmo que nos mueve.
-            Rompemos paradigmas, por que creemos en un futuro digital donde todos somos
-            parte de la movida.
-        </p>
-        <p>
-            ¡Únete a la revolución tech, donde cada línea de código es un paso hacia adelante
-            en nuestra onda colectiva!
-        </p>
+        <div id="nosotros">
+            <h1>¿Qué acerca de nosotros?</h1>
+            <p>
+                En Alexágono, sacamos la chamba. No solo somos coders, ¡Somos
+                la banda que transforma retos en pura chispa digital!
+            </p>
+            <p>
+                Aquí, la accesibilidad y la institucionalidad son el ritmo que nos mueve.
+                Rompemos paradigmas, por que creemos en un futuro digital donde todos somos
+                parte de la movida.
+            </p>
+            <p>
+                ¡Únete a la revolución tech, donde cada línea de código es un paso hacia adelante
+                en nuestra onda colectiva!
+            </p>
+        </div>
     </body>
 </html>
