--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import Nosotros from "../components/Nosotros.astro";
 import Servicios from "../components/Servicios.astro";
 import Clientes from "../components/Clientes.astro";
 import Contacto from "../components/Contacto.astro";
+import Underconstruction from "../components/Underconstruction.astro";
 ---
 
 <html lang="en">
@@ -18,8 +19,11 @@ import Contacto from "../components/Contacto.astro";
 	</head>
 
 	<body>
-
-		<header>
+		<div>
+			<Underconstruction/>
+		</div>
+		<!--
+			<header>
 			<Header/>
 		</header>
 
@@ -46,4 +50,6 @@ import Contacto from "../components/Contacto.astro";
 	<footer>
 		<Footer/>
 	</footer>
+		 -->
+		
 </html>
