[Fix]: Padding added to all div sections of the site, also transparent navbar was added to the site

--- a/src/components/Contacto.astro
+++ b/src/components/Contacto.astro
@@ -41,6 +41,7 @@
         #contacto-div{
             background-color: #4B4C77;
             color: #FFFFFF;
+            padding: 10%;
         }
         </style>
         <div id="contacto-div">
