--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,6 +11,7 @@
     a{
         color: #FFFFFF;
         text-decoration: none;
+        transition: ease-in;
     }
     a:visited{
         color: #FFFFFF;
@@ -33,7 +34,7 @@
     width: 100%;
     top: 0;
     justify-content: flex-start;
-    background-color: #1B2A57;
+    background-color: transparent;
 
     }
 
