--- a/src/components/Inicio.astro
+++ b/src/components/Inicio.astro
@@ -41,6 +41,7 @@
 
         #inicio{
             background-color: #8A92C9;
+            padding: 10%;
         }
         </style>
         <div id="inicio">
