--- a/src/components/Nosotros.astro
+++ b/src/components/Nosotros.astro
@@ -40,6 +40,7 @@
         #nosotros{
             background-color: #8A92C9;
             color: #FFFFFF;
+            padding: 10%;
         }
         </style>
         <div id="nosotros">
