--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,12 +18,19 @@ import Underconstruction from "../components/Underconstruction.astro";
 		<title>Alexágono</title>
 	</head>
 
+	<style>
+		body{
+			background-color:  #8A92C9;
+		}
+		#inicio{
+			
+		}
+		#nosotros{
+			margin: 0%;
+		}
+	</style>
 	<body>
-		<div>
-			<Underconstruction/>
-		</div>
-		<!--
-			<header>
+		<header>
 			<Header/>
 		</header>
 
@@ -50,6 +57,5 @@ import Underconstruction from "../components/Underconstruction.astro";
 	<footer>
 		<Footer/>
 	</footer>
-		 -->
 		
 </html>
