--- a/src/components/Clientes.astro
+++ b/src/components/Clientes.astro
@@ -40,6 +40,7 @@
         }
         #clientes-estilos{
             background-color: #8A92C9;
+            padding: 10%;
         }
         </style>
         <div id="clientes-estilos">
