--- a/src/components/Servicios.astro
+++ b/src/components/Servicios.astro
@@ -43,8 +43,10 @@
         #servicios-alexagono{
             background-color: #6062AC;
             color: #FFFFFF;
+            padding: 10%;
         }
         #valor-servicios{
+            padding: 10%;
             background-color: #1E1E1E;
             color: #FFFFFF;
         }
